Name:                   matroid
Version:                0.0.0
Author:                 Immanuel Albrecht <mail@immanuel-albrecht.de>
Maintainer:             Immanuel Albrecht <mail@immanuel-albrecht.de>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Matroid
                      , Data.Matroid.Uniform
  Other-Modules:        Data.Matroid.Internal
  Build-Depends:        base >= 4 && < 5
                      , containers >= 0.6

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , containers
                      , QuickCheck
                      , matroid

Source-Repository head
  Type:                 git
  Location:             
    git: https://github.com/alb-i/h-matroid/
